--- a/task-backend/public/admin/tasker-profile.html
+++ b/task-backend/public/admin/tasker-profile.html
@@ -122,7 +122,7 @@
   <div class="main">
     <h2>Taskers Profile</h2>
     <div class="profile-header">
-      <img id="avatar" class="avatar" src="https://via.placeholder.com/100" />
+        <img id="avatar" class="avatar" src="" />
       <div>
         <h3 id="name"></h3>
         <p id="email"></p>
@@ -159,7 +159,8 @@
       document.getElementById("location").textContent = "Location: " + taskerData.location;
       document.getElementById("experience").textContent = "Experience: " + taskerData.experience;
       document.getElementById("bio").textContent = taskerData.about;
-      document.getElementById("avatar").src = taskerData.image || "https://via.placeholder.com/100";
+      document.getElementById("avatar").src = taskerData.image ? taskerData.image : "";
+
 
       document.getElementById("documents").innerHTML = taskerData.documents.map((doc, i) =>
         `<a href="${doc}" target="_blank" class="doc-link">Doc ${i + 1}</a>`).join("");
