--- a/task-backend/public/admin/reports.html
+++ b/task-backend/public/admin/reports.html
@@ -2,72 +2,234 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Admin – Reports</title>
+  <title>Admin – Reported Users</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: sans-serif; background: #f4f4f4; padding: 20px; }
-    h1 { color: #215432; text-align: center; margin-bottom: 20px; }
-    table { width: 100%; background: white; border-collapse: collapse; }
-    th, td { padding: 10px; border-bottom: 1px solid #ddd; text-align: left; }
-    th { background: #215432; color: white; }
-    tr:hover { background-color: #f9f9f9; }
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: #f2f2f2;
+      display: flex;
+    }
+
+    /* Sidebar */
+    .sidebar {
+      width: 220px;
+      background: white;
+      color: #215432;
+      padding: 20px 0;
+      height: 100vh;
+      border-right: 1px solid #ddd;
+    }
+
+    .sidebar img {
+      display: block;
+      margin: 0 auto 40px auto;
+      width: 150px;
+    }
+
+    .sidebar a {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 12px 20px;
+      color: #215432;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .sidebar a.active,
+    .sidebar a:hover {
+      background: #f1f8f4;
+    }
+
+    /* Main */
+    .main {
+      flex: 1;
+      padding: 30px;
+    }
+
+    .main h1 {
+      font-size: 24px;
+      color: #215432;
+      margin-bottom: 20px;
+    }
+
+    .search-input {
+      padding: 10px 14px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      width: 250px;
+      font-size: 14px;
+      margin-bottom: 20px;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: white;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    }
+
+    th, td {
+      padding: 14px;
+      border-bottom: 1px solid #eee;
+      text-align: left;
+      font-size: 14px;
+    }
+
+    th {
+      background: #215432;
+      color: white;
+      font-weight: 600;
+    }
+
+    tr:hover {
+      background: #f9f9f9;
+    }
+
+    .details-btn {
+      color: #215432;
+      font-weight: 600;
+      text-decoration: underline;
+      cursor: pointer;
+      font-size: 14px;
+    }
+
+    /* Modal */
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.4);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      width: 400px;
+      position: relative;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+    }
+
+    .modal-content h3 {
+      color: #215432;
+      margin-top: 0;
+      font-size: 18px;
+    }
+
+    .modal-content p {
+      font-size: 14px;
+      color: #333;
+      background: #f8f8f8;
+      padding: 10px;
+      border-radius: 6px;
+      white-space: pre-line;
+    }
+
+    .close-btn {
+      position: absolute;
+      top: 8px;
+      right: 10px;
+      background: transparent;
+      border: none;
+      font-size: 18px;
+      cursor: pointer;
+      color: #333;
+    }
   </style>
 </head>
-
-
 <body>
-
-  <div style="margin-bottom: 20px;">
-    <a href="/admin/index.html" style="background: #215432; color: white; padding: 10px 16px; border-radius: 6px; text-decoration: none; font-weight: bold;">← Back to Dashboard</a>
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <img src="211.png" alt="TASK logo" />
+    <a href="/admin/index.html"><span>🏠</span> Dashboard</a>
+    <a href="/admin/clients.html"><span>👥</span> Clients</a>
+    <a href="/admin/taskers.html"><span>🛠️</span> Taskers</a>
+    <a href="/admin/tasks.html"><span>📋</span> Tasks</a>
+    <a class="active" href="/admin/reports.html"><span>🚨</span> Reported Users</a>
   </div>
 
-<h1>Reported Users</h1>
+  <!-- Main -->
+  <div class="main">
+    <h1>Client List</h1>
+    <input type="text" id="search" class="search-input" placeholder="Search Clients...">
 
-<table id="reportsTable">
-  <thead>
-    <tr>
-      <th>Reporter</th>
-      <th>Reported</th>
-      <th>Task</th>
-      <th>Reason</th>
-      <th>Date</th>
-    </tr>
-  </thead>
-  <tbody></tbody>
-</table>
+    <table>
+      <thead>
+        <tr>
+          <th>User Reported</th>
+          <th>Reporter</th>
+          <th>Date Reported</th>
+          <th>Details</th>
+        </tr>
+      </thead>
+      <tbody id="reportsTable"></tbody>
+    </table>
+  </div>
 
-<script>
-  async function loadReports() {
-    try {
-      const res = await fetch("/api/admin/reports");
-      const data = await res.json();
+  <!-- Modal -->
+  <div class="modal" id="detailsModal">
+    <div class="modal-content">
+      <button class="close-btn" id="closeModal">&times;</button>
+      <h3>Report Description</h3>
+      <p id="reportReason">—</p>
+    </div>
+  </div>
 
-      const tbody = document.querySelector("#reportsTable tbody");
-      data.forEach(r => {
-        const row = document.createElement("tr");
-        row.innerHTML = `
-        <td>
-            ${r.reporterName}<br>
-            <small>${r.reporterEmail}</small><br>
-            <small>📞 ${r.reporterPhone}</small>
-        </td>
-        <td>
-            ${r.reportedName}<br>
-            <small>${r.reportedEmail}</small><br>
-            <small>📞 ${r.reportedPhone}</small>
-        </td>
-        <td>${r.taskTitle}</td>
-        <td>${r.reason}</td>
-        <td>${r.createdAt}</td>
-        `;
-        tbody.appendChild(row);
-      });
-    } catch (err) {
-      console.error("Failed to load reports:", err);
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script>
+    let allReports = [];
+
+    async function loadReports() {
+      try {
+        const res = await axios.get("/api/admin/reports");
+        allReports = res.data;
+        renderReports(allReports);
+      } catch (err) {
+        console.error("Failed to load reports:", err);
+      }
     }
-  }
 
-  loadReports();
-</script>
+    function renderReports(data) {
+      const tbody = document.getElementById("reportsTable");
+      tbody.innerHTML = "";
+      data.forEach(r => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td>${r.reportedName}</td>
+          <td>${r.reporterName}</td>
+          <td>${r.createdAt}</td>
+          <td><span class="details-btn" onclick="showDetails('${r.reason.replace(/'/g, "\\'")}')">more</span></td>
+        `;
+        tbody.appendChild(tr);
+      });
+    }
 
+    function showDetails(reason) {
+      document.getElementById("reportReason").textContent = reason;
+      document.getElementById("detailsModal").style.display = "flex";
+    }
+
+    document.getElementById("closeModal").addEventListener("click", () => {
+      document.getElementById("detailsModal").style.display = "none";
+    });
+
+    document.getElementById("search").addEventListener("input", (e) => {
+      const term = e.target.value.toLowerCase();
+      const filtered = allReports.filter(r => r.reportedName.toLowerCase().includes(term));
+      renderReports(filtered);
+    });
+
+    loadReports();
+  </script>
 </body>
 </html>
